array.island.Island.scala.error
Compilation error:
Island:5: error: '(' expected but identifier found.
    if num[i-1]<num[i]{
       ^Island:8: error: illegal start of simple expression
  }
  ^